codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__hooks_review_prompt_view__tests__hooks_review_prompt_with_trust_error.snap
---
source: tui/src/bottom_pane/hooks_review_prompt_view.rs
expression: "render_lines(&view, 80)"
---
                                                                                
  Hooks need review                                                             
  1 hook is new or changed.                                                     
  Hooks can run outside the sandbox after you trust them.                       
  Failed to trust hooks: disk full                                              
                                                                                
  › 1. Review hooks                                                             
    2. Trust all and continue                                                   
    3. Continue without trusting (hooks won't run)                              
                                                                                
  Press enter to continue; esc to continue without trusting
